[package]
name = "raft4rs"
version = "0.1.0"
authors = ["Ansj <ansj-sun@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4"
thiserror = "1.0.19"
futures = { version = "0.3.5", default-features = false, features = ["std"] }
futures-util = { version = "0.3.5", default-features = false, features = ["std"] }
futures-io = { version = "0.3.5", default-features = false, features = ["std"] }
async-std = { version = "1.6.0", features = ["default","unstable"]}
rand = "0.7.3"
deadpool = "0.5.1"
async-trait = "0.1.32"
