[package]
name = "raft4rs"
description = "Rust impl for raft"
version = "0.1.2"
authors = ["Ansj <ansj-sun@163.com>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["raft", "rust", "raft4rs"]
homepage = "https://github.com/ansjsun/rust-raft"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4"
thiserror = "1.0.19"
futures = { version = "0.3.5", default-features = false, features = ["std"] }
futures-util = { version = "0.3.5", default-features = false, features = ["std"] }
futures-io = { version = "0.3.5", default-features = false, features = ["std"] }
async-std = { version = "1.6.2", features = ["default","unstable","attributes", "tokio02"]}
rand = "0.7.3"
deadpool = "0.5.1"
async-trait = "0.1.33"

[workspace]
members =[
    "example"
]