[package]
name = "example"
version = "0.1.0"
authors = ["Ansj <ansj-sun@163.com>"]
edition = "2018"

[[bin]]
name = "rust-raft-example"
path = "src/main.rs"


[dependencies]
log = "0.4"
env_logger = "0.7.1"
rust4rs = { path = "..", version = "0.1.0" }
smol = { version = "0.1", features = ["tokio02"] }