[package]
name = "example"
version = "0.1.0"
authors = ["Ansj <ansj-sun@163.com>"]
edition = "2018"

[[bin]]
name = "rust-raft-example"
path = "src/main.rs"

[[bin]]
name = "validate_raft_log"
path = "src/validate_raft_log.rs"

[dependencies]
log = "0.4"
env_logger = "0.7.1"
raft4rs = { path = "..", version = "0.1.0" }
async-std = { version = "1.6.3", features = ["default","unstable","attributes"]}